[package]
name = "rust-db-consistent-lines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd-client = "0.14"
tokio = { version = "1.0", features = ["full"] }
antithesis_sdk = "0.1.5"
serde_json = "1.0.25"